# baysoko

./: .dev_secret_key  .dockerignore  .env.example  .secret_key  DESIGN_SYSTEM.md  Dockerfile  Procfile  asgi.py  baysoko_celery.py  build.sh  celery.py  celery_app.py  celery_proxy.py  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  check_cloudinary.py  create_superuser.py  db.sqlite3-journal  db_override.py  debug_request.py  fake_data.py  manage.py  nixpacks.toml  pre_migrate.py  pyproject.toml  railway.json  render.yaml  requirements.txt  reset_google_oauth.py  run_https_dev.py  test_email.py  test_google_oauth.py  test_webhook.py  wines.csv
.github/: copilot-instructions.md
affiliates/: admin.py  models.py  signals.py  urls.py  views.py
baysoko/: __init__.py  asgi.py  baysoko_celery.py  celery.py  context_processors.py  csrf_middleware.py  middleware_async_stream.py  mpesa_settings.py  settings.py  urls.py  views.py  wsgi.py
blog/: context_processors.py  models.py  urls.py  views.py
chats/: consumers.py  middleware.py  models.py  routing.py  urls.py  utils.py  views.py  views_agent.py
delivery/: admin.py  apps.py  consumers.py  context_processors.py  decorators.py  forms.py  glovo_client.py  integration.py  middleware.py  models.py  permissions.py  routing.py  serializers.py  signals.py  tasks.py  tests.py  urls.py  utils.py  views.py
homabay_souq/: asgi.py  celery.py  middleware.py  settings.py  urls.py  views.py
integrations/: delivery.py
listings/: admin.py  admin_views.py  ai_assistant.py  ai_listing_helper.py  ai_views.py  (+15 more)
(+383 files in other folders)
