[tool.poetry]
name = "baysoko"
version = "1.0.0"
description = "HomaBay Souq Marketplace"
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = "^3.11"
Django = ">=4.2.10,<5.2.0"
djangorestframework = "3.15.1"
django-cors-headers = "4.3.1"
drf-yasg = "1.21.7"
django-filter = "24.3"
celery = "5.3.6"
redis = "5.0.1"
stripe = "7.12.0"
django-phonenumber-field = "7.3.0"
sentry-sdk = "1.44.0"
qrcode = "7.4.2"
Pillow = "10.4.0"
pyzbar = "0.1.9"
django-redis = "5.4.0"
cryptography = "42.0.8"
requests = "2.31.0"
googlemaps = "4.10.0"
django-jsonview = "2.0.0"
reportlab = "4.0.4"
channels = "4.3.2"
openai = "2.14.0"
python-decouple = "3.8.0"
django-crispy-forms = "2.0"
crispy-bootstrap5 = "0.7"
gunicorn = "20.1.0"
whitenoise = "6.4.0"
psycopg2-binary = ">=2.9.6"
django-cloudinary-storage = "0.3.0"
cloudinary = "1.30.0"
django-allauth = "65.11.2"
PyJWT = ">=2.8.0"
africastalking = ">=2.0.0"
django-extensions = "3.2"
dj-database-url = ">=3.0.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"